--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "aos": "^2.3.4",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.5.4",
@@ -18,10 +19,12 @@
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "react-vertical-timeline-component": "^3.6.0",
     "redux-persist": "^6.0.0",
     "sonner": "^1.5.0"
   },
